# nlp-sentiment-analysis-web-app

./: README.md  app.py  pyproject.toml  sentiment_analysis.py
templates/: index.html
