[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Stephan Sommer <steven.sommer@go.winona.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
wordcloud = "^1.9.4"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
